# lelouch

./: .gitignore  LICENSE  README.md  lelouch.bat  pyproject.toml
src/lelouch/: __init__.py  __main__.py  cli.py  config.py  llm_client.py
src/lelouch/agents/: __init__.py  frame_analyzer.py  harvest_memory.py  harvester.py  request_parser.py  search.py  tool_defs.py  video_clipper.py
src/lelouch/models/: __init__.py  harvest.py
src/lelouch/tui/: __init__.py  dashboard.py  settings.py
tests/: __init__.py  test_harvester.py  test_memory.py  test_search.py
